--- a/personal-portfolio-march-23/src/App.module.css
+++ b/personal-portfolio-march-23/src/App.module.css
@@ -9,35 +9,45 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  text-align: center;
 }
 
 #nameTag {
   height: 15rem;
   width: auto;
   margin-left: auto;
-  margin-right: auto; 
-}
-
-#techStackTag {
-  margin-top: 2rem;
-  max-width: 80dvw;
-  min-width: 300px;
-  height: auto;
-  margin-left: auto;
   margin-right: auto;
 }
 
-.bar1, .bar2, .bar3 {
+#nameTag:hover {
+  cursor: pointer;
+}
+
+#headline {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -4rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+/* Link styling */
+
+.linkStyle {
+  text-decoration: none;
+}
+
+.bar1,
+.bar2,
+.bar3 {
   height: 30px;
-  background-color: #FF5757;
-  margin: 2px;
+  background-color: #ff5757;
+  margin-top: 2px;
 }
 
 .bar1 {
   position: relative;
-  width: 100%;
+  width: 98%;
   bottom: 0;
-  
 }
 
 .bar2 {
@@ -51,18 +61,17 @@
 .barText {
   margin: 0;
   padding-left: 5px;
-  color: gray;
+  color: white;
 }
 
 .barText:hover {
   cursor: pointer;
   font-weight: bolder;
   color: #333333;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .bar1:active {
-  transition: .2s;
+  transition: 0.2s;
   /* Transform something here? */
 }
-
