--- a/personal-portfolio-march-23/src/App.module.css
+++ b/personal-portfolio-march-23/src/App.module.css
@@ -3,6 +3,11 @@
   margin: 0 auto;
   text-align: center;
 }
+.App {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 
 .nameContainer {
   width: 100dvw;
@@ -10,6 +15,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  margin-top: 1rem;
 }
 
 #nameTag {
@@ -17,18 +23,30 @@
   width: auto;
   margin-left: auto;
   margin-right: auto;
+  filter: drop-shadow(10px 10px 10px gray);
+  transition: .25s;
 }
 
 #nameTag:hover {
   cursor: pointer;
 }
 
+#nameTag:active {
+  transform: scale(95%);
+}
+
+
+
 #headline {
   margin-left: auto;
   margin-right: auto;
   margin-top: -4rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  z-index: 4;
+  
 }
+
+
 
 /* Link styling */
 
@@ -40,14 +58,15 @@
 .bar2,
 .bar3 {
   height: 30px;
-  background-color: #ff5757;
+  background-color: #FF5757;
   margin-top: 2px;
 }
 
 .bar1 {
   position: relative;
-  width: 98%;
+  width: 100dvw;
   bottom: 0;
+  margin-top: 2rem;
 }
 
 .bar2 {
@@ -74,4 +93,21 @@
 .bar1:active {
   transition: 0.2s;
   /* Transform something here? */
+}
+
+/* Footer styling */
+.footer {
+  position: relative;
+  height: 4%;
+  width: 100dvw;
+  background-color: #0CC0DF;
+  margin-top: auto;
+  
+}
+
+.footerText {
+  font-size: .75rem;
+  font-style: italic;
+  margin-left: 2rem;
+  margin-top: .5rem;
 }
