--- a/personal-portfolio-march-23/src/index.css
+++ b/personal-portfolio-march-23/src/index.css
@@ -13,8 +13,8 @@
 /* This is the container for the whole app */
 body {
   margin: 0;
+  padding: 0;
   display: flex;
-  /* place-items: center; */
   height: 100dvh;
   
 }
