--- a/personal-portfolio-march-23/src/App.module.css
+++ b/personal-portfolio-march-23/src/App.module.css
@@ -6,7 +6,8 @@
 .App {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  /* height: 100%; */
+  min-height: 100dvh;
 }
 
 .nameContainer {
@@ -16,6 +17,7 @@
   justify-content: center;
   text-align: center;
   margin-top: 1rem;
+  
 }
 
 #nameTag {
@@ -24,7 +26,7 @@
   margin-left: auto;
   margin-right: auto;
   filter: drop-shadow(10px 10px 10px gray);
-  transition: .25s;
+  transition: 0.25s;
 }
 
 #nameTag:hover {
@@ -35,64 +37,54 @@
   transform: scale(95%);
 }
 
-
-
 #headline {
   margin-left: auto;
   margin-right: auto;
-  margin-top: -4rem;
+  margin-top: 1rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   z-index: 4;
   
 }
 
-
-
 /* Link styling */
+.linkContainer {
+  display: flex;
+  position: sticky;
+  justify-content: center;
+  
+  height: 10;
+  top: -1rem;
+  z-index: 999;
+  filter: drop-shadow(10px 10px 10px gray);
+}
+
+#navigationList {
+  background-color: #ff5757;
+  display: flex;
+  width: 100%;
+  list-style: none;
+  flex-direction: column;
+  align-items: center;
+  
+  
+  
+}
 
 .linkStyle {
   text-decoration: none;
-}
-
-.bar1,
-.bar2,
-.bar3 {
-  height: 30px;
-  background-color: #FF5757;
-  margin-top: 2px;
-}
-
-.bar1 {
-  position: relative;
-  width: 100dvw;
-  bottom: 0;
-  margin-top: 2rem;
-}
-
-.bar2 {
-  width: 70%;
-}
-
-.bar3 {
-  width: 40%;
-}
-
-.barText {
-  margin: 0;
-  padding-left: 5px;
   color: white;
 }
 
-.barText:hover {
-  cursor: pointer;
-  font-weight: bolder;
-  color: #333333;
+.linkListItem {
   transition: 0.3s;
+  width: 5rem;
+  margin-left: -2rem;
+  margin-right: auto;
+  
 }
 
-.bar1:active {
-  transition: 0.2s;
-  /* Transform something here? */
+.linkListItem:hover {
+  color: #46351d;
 }
 
 /* Footer styling */
@@ -100,14 +92,13 @@
   position: relative;
   height: 4%;
   width: 100dvw;
-  background-color: #0CC0DF;
+  background-color: #0cc0df;
   margin-top: auto;
-  
 }
 
 .footerText {
-  font-size: .75rem;
+  font-size: 0.75rem;
   font-style: italic;
   margin-left: 2rem;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
