--- a/personal-portfolio-march-23/src/App.module.css
+++ b/personal-portfolio-march-23/src/App.module.css
@@ -17,7 +17,6 @@
   justify-content: center;
   text-align: center;
   margin-top: 1rem;
-  
 }
 
 #nameTag {
@@ -25,8 +24,11 @@
   width: auto;
   margin-left: auto;
   margin-right: auto;
-  filter: drop-shadow(10px 10px 10px gray);
+  margin-bottom: 1rem;
+  filter: drop-shadow(5px 5px 5px gray);
   transition: 0.25s;
+  padding-bottom: 14px;
+  z-index: 1;
 }
 
 #nameTag:hover {
@@ -40,13 +42,10 @@
 #headline {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1rem;
+  margin-top: 2rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   z-index: 4;
-  
 }
-
-
 
 /* Footer styling */
 .footer {
