--- a/personal-portfolio-march-23/src/Components/Contact/contact.module.css
+++ b/personal-portfolio-march-23/src/Components/Contact/contact.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 3rem;
   animation: contactAnimation 0.4s ease-out 1;
-  
 }
 
 .contactList {
@@ -42,7 +42,7 @@
     
 }
 
-@media only screen and (max-width: 420px){
+@media only screen and (max-width: 530px){
     .contactList {
         display: flex;
         flex-direction: column;
