cv pdf added, hamburger styling and name click function fixed

--- a/personal-portfolio-march-23/src/Components/About/about.module.css
+++ b/personal-portfolio-march-23/src/Components/About/about.module.css
@@ -8,6 +8,21 @@
     animation: 0.4s aboutAnimation ease-out 1;
 }
 
+.showCV {
+    padding-bottom: 1rem;
+}
+
+.cvLink {
+    text-decoration: none;
+    font-weight: 800;
+    color: black;
+    transition: .3s;
+}
+
+.cvLink:hover {
+    color: #ff5757;
+}
+
 @keyframes aboutAnimation {
     0%{
         opacity: 0;
