--- a/personal-portfolio-march-23/src/Components/Contact/contact.module.css
+++ b/personal-portfolio-march-23/src/Components/Contact/contact.module.css
@@ -13,10 +13,15 @@
   
 }
 
+.contactMeText {
+    color: white;
+}
+
 .contactListLink {
   text-decoration: none;
   display: flex;
   align-items: center;
+  color: white;
 }
 
 @keyframes contactAnimation {
