--- a/personal-portfolio-march-23/src/Components/Projects/projects.module.css
+++ b/personal-portfolio-march-23/src/Components/Projects/projects.module.css
@@ -19,8 +19,8 @@
 
 .projectHeading {
     text-align: center;
-    color: #46351D;
-    border: solid #46351D;
+    color: #FFFFFF;
+    border: solid gray;
     border-width: 2px 0px 2px 0px;
 }
 
