--- a/personal-portfolio-march-23/src/Components/About/about.module.css
+++ b/personal-portfolio-march-23/src/Components/About/about.module.css
@@ -6,6 +6,9 @@
     margin-left: auto;
     margin-right: auto;
     animation: 0.4s aboutAnimation ease-out 1;
+    color: white;
+    
+  
 }
 
 .showCV {
@@ -15,7 +18,7 @@
 .cvLink {
     text-decoration: none;
     font-weight: 800;
-    color: black;
+    color: white;
     transition: .3s;
 }
 
