--- a/personal-portfolio-march-23/src/Components/Projects/projects.module.css
+++ b/personal-portfolio-march-23/src/Components/Projects/projects.module.css
@@ -8,6 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     animation: projectAnimation .4s ease-out 1;
+    animation: slideIn 1s;
    
 }
 
@@ -41,6 +42,17 @@
     }
     100% {
       opacity: 1;
+    }
+  }
+
+  @keyframes slideIn {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+    to {
+      margin-left: 0%;
+      width: 100%;
     }
   }
 
